--- a/components/PageTitle/styles.module.scss
+++ b/components/PageTitle/styles.module.scss
@@ -4,13 +4,14 @@
 }
 
 .pageTitle h1 {
-    font-size: 3rem;
+    font-size: clamp(3rem, 20vw, 10rem);
     font-weight: 800;
     color: #1e293b;
+    line-height: 1;
 }
 
 .pageTitle p {
-    font-size: 1.5rem;
+    font-size: clamp(2rem, 8vw, 5rem);
     font-weight: 600;
     color: #475569;
 }
